--- a/index.html
+++ b/index.html
@@ -2453,7 +2453,7 @@
         class="grow overflow-y-auto px-[calc(var(--margin-x)-.5rem)] py-5 transition-all duration-[.25s]">
         <div x-show="activeChat.chatId === 'chat-1'" x-transition:enter="transition-all duration-500 easy-in-out"
           x-transition:enter-start="opacity-0 [transform:translate3d(0,1rem,0)]"
-          x-transition:enter-end="opacity-100 [transform:translate3d(0,0,0)]" class="space-y-5">
+          x-transition:enter-end="opacity-100 [transform:translate3d(0,0,0)]" class="space-y-5" id="big-container-message">
           <div class="mx-4 flex items-center space-x-3">
             <div class="h-px flex-1 bg-slate-200 dark:bg-navy-500"></div>
             <p>Sunday</p>
