--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
           <label class="block">
             <span>Username:</span>
             <span class="relative mt-1.5 flex">
-              <input
+              <input id="user-id"
                 class="form-input peer w-full rounded-lg border border-slate-300 bg-transparent px-3 py-2 pl-9 placeholder:text-slate-400/70 hover:z-10 hover:border-slate-400 focus:z-10 focus:border-primary dark:border-navy-450 dark:hover:border-navy-400 dark:focus:border-accent"
                 placeholder="Enter Username" type="text" />
               <span
@@ -96,7 +96,8 @@
               Password?</a>
           </div>
           <button 
-            class="btn mt-5 w-full bg-primary font-medium text-white hover:bg-primary-focus focus:bg-primary-focus active:bg-primary-focus/90 dark:bg-accent dark:hover:bg-accent-focus dark:focus:bg-accent-focus dark:active:bg-accent/90" onclick="connected();onConnect()"  >
+            class="btn mt-5 w-full bg-primary font-medium text-white hover:bg-primary-focus focus:bg-primary-focus active:bg-primary-focus/90 dark:bg-accent dark:hover:bg-accent-focus dark:focus:bg-accent-focus dark:active:bg-accent/90"
+             onclick="connected()">
            Sign In 
           </button>
           <div class="mt-4 text-center text-xs+">
