--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
               <div class="mt-3 grid grid-cols-2 gap-3 px-3">
                 <div class="rounded-lg bg-slate-100 p-2.5 dark:bg-navy-600">
                   <div class="flex items-center space-x-2">
-                    <img class="h-10 w-10" src="images/logos/bitcoin.svg" alt="image" />
+                    <img class="h-10 w-10"  alt="image" />
                     <div>
                       <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100">
                         BTC
@@ -685,7 +685,7 @@
 
                 <div class="rounded-lg bg-slate-100 p-2.5 dark:bg-navy-600">
                   <div class="flex items-center space-x-2">
-                    <img class="h-10 w-10" src="images/logos/solana.svg" alt="image" />
+                    <img class="h-10 w-10"  alt="image" />
                     <div>
                       <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100">
                         SOL
@@ -1440,7 +1440,7 @@
           </div>
           <div @click="isShowChatInfo = true" class="flex cursor-pointer items-center space-x-4 font-inter">
             <div class="avatar">
-              <img class="rounded-full" src="404-2.html" :src="activeChat.avatar_url" alt="avatar" />
+              <img class="rounded-full"  :src="activeChat.avatar_url" alt="avatar" />
             </div>
             <div>
               <p class="font-medium text-slate-700 line-clamp-1 dark:text-navy-100" x-text="activeChat.name"></p>
