--- a/index.html
+++ b/index.html
@@ -1706,15 +1706,16 @@
 
 
           <!-- l conversation  -->
-      
-          <div :class="$store.breakpoints.smAndUp && 'scrollbar-sm'" id="conversation-container"
+          <div class="flex items-center justify-center w-full">
+          <span class="loader hidden" id="conversation-spinner"></span>  
+        </div>
+
+         <div :class="$store.breakpoints.smAndUp && 'scrollbar-sm'" id="conversation-container"
           class="grow overflow-y-auto px-[calc(var(--margin-x)-.5rem)] py-5 transition-all duration-[.25s]">
           <div x-show="activeChat.chatId === 'chat-1'" x-transition:enter="transition-all duration-500 easy-in-out"
             x-transition:enter-start="opacity-0 [transform:translate3d(0,1rem,0)]"
             x-transition:enter-end="opacity-100 [transform:translate3d(0,0,0)]" class="space-y-5" id="big-container-message"></div>
         </div>
-
-
 
 
 
