--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
 
         <!-- Minimized Sidebar Panel -->
-        <div class="sidebar-panel-min">
+        <div class="sidebar-panel-min " style="left:-80px" >
           <div class="flex h-full flex-col bg-white dark:bg-navy-750">
             <div class="flex h-18 shrink-0 items-center justify-center">
               <div class="avatar flex h-10 w-10">
