--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                     <div class="avatar h-10 w-10">
                       <img
                         class="rounded-full"
-                        src="images/avatar/avatar-19.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                       <div
@@ -964,7 +964,7 @@
                           <div class="avatar h-7 w-7">
                             <img
                               class="rounded-full"
-                              src="images/avatar/avatar-20.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1042,7 +1042,7 @@
                           <div class="avatar h-7 w-7">
                             <img
                               class="rounded-full"
-                              src="images/avatar/avatar-19.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1120,7 +1120,7 @@
                           <div class="avatar h-7 w-7">
                             <img
                               class="rounded-full"
-                              src="images/avatar/avatar-18.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1356,7 +1356,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-16.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1370,7 +1370,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-20.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1435,7 +1435,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-17.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1449,7 +1449,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-19.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1514,7 +1514,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-5.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1528,7 +1528,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-11.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1593,7 +1593,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-8.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1607,7 +1607,7 @@
                     <div class="avatar h-7 w-7 hover:z-10">
                       <img
                         class="rounded-full ring ring-white dark:ring-navy-700"
-                        src="images/avatar/avatar-12.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1722,7 +1722,7 @@
                     <div class="avatar mt-2 h-20 w-20">
                       <img
                         class="mask is-squircle"
-                        src="images/avatar/avatar-19.jpg"
+                        src="images/avatar/unkown.jpg"
                         alt="avatar"
                       />
                     </div>
@@ -1898,7 +1898,7 @@
                           <div class="avatar h-7 w-7 hover:z-10">
                             <img
                               class="rounded-full ring ring-white dark:ring-navy-700"
-                              src="images/avatar/avatar-16.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1914,7 +1914,7 @@
                           <div class="avatar h-7 w-7 hover:z-10">
                             <img
                               class="rounded-full ring ring-white dark:ring-navy-700"
-                              src="images/avatar/avatar-20.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1922,7 +1922,7 @@
                           <div class="avatar h-7 w-7 hover:z-10">
                             <img
                               class="rounded-full ring ring-white dark:ring-navy-700"
-                              src="images/avatar/avatar-8.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -1930,7 +1930,7 @@
                           <div class="avatar h-7 w-7 hover:z-10">
                             <img
                               class="rounded-full ring ring-white dark:ring-navy-700"
-                              src="images/avatar/avatar-5.jpg"
+                              src="images/avatar/unkown.jpg"
                               alt="avatar"
                             />
                           </div>
@@ -2099,7 +2099,7 @@
       <!-- Main Content Wrapper -->
       <main
         id="chatId"
-        x-data="{ isShowChatInfo: !$store.breakpoints.mdAndDown, activeChat: { chatId: 'chat-1', name: '', avatar_url: 'images/avatar/avatar-19.jpg' } }"
+        x-data="{ isShowChatInfo: !$store.breakpoints.mdAndDown, activeChat: { chatId: 'chat-1', name: '', avatar_url: 'images/avatar/unkown.jpg' } }"
         x-effect="$store.breakpoints.mdAndDown === true && (isShowChatInfo = false)"
         class="main-content h-100vh chat-app mt-0 flex w-full flex-col"
         x-on:change-active-chat.window="activeChat=$event.detail"
@@ -2357,7 +2357,7 @@
                 >
                   <img
                     class="rounded-full"
-                    src="images/avatar/avatar-12.jpg"
+                    src="images/avatar/unkown.jpg"
                     alt="avatar"
                   />
                   <span
@@ -2374,24 +2374,23 @@
                     class="popper-box w-64 rounded-lg border border-slate-150 bg-white shadow-soft dark:border-navy-600 dark:bg-navy-700"
                   >
                     <div
-                      class="flex items-center space-x-4 rounded-t-lg bg-slate-100 py-5 px-4 dark:bg-navy-800"
+                      id="userContainer" class="flex items-center space-x-4 rounded-t-lg bg-slate-100 py-5 px-4 dark:bg-navy-800"
                     >
                       <div class="avatar h-14 w-14">
                         <img
                           class="rounded-full"
-                          src="images/avatar/avatar-12.jpg"
+                          src="images/avatar/unkown.jpg"
                           alt="avatar"
                         />
                       </div>
                       <div>
-                        <a
+                        <a id="usernameLink"
                           href="#"
                           class="text-base font-medium text-slate-700 hover:text-primary focus:text-primary dark:text-navy-100 dark:hover:text-accent-light dark:focus:text-accent-light"
                         >
-                          Travis Fuller
                         </a>
                         <p class="text-xs text-slate-400 dark:text-navy-300">
-                          Product Designer
+                          User
                         </p>
                       </div>
                     </div>
@@ -2638,7 +2637,7 @@
                 </div>
               </div>
             </div>
-
+              
             <div id="ModalPlan" class="modal hidden">
               <!-- Modal content -->
               <div class="modal-content bg-slate-50 dark:bg-navy-900">
