--- a/index.html
+++ b/index.html
@@ -39,20 +39,13 @@
     x-bind="$store.global.documentBody"
     class="has-min-sidebar is-sidebar-open is-header-blur"
   >
+  <!-- <div id="buyLoader">
+  </div> -->
     <!-- App preloader-->
-    <div
-      class="app-preloader fixed z-50 grid h-full w-full place-content-center bg-slate-50 dark:bg-navy-900"
-    >
-  <div id="buyLoader">
-  <!-- Loader content goes here -->
-</div>
-
-
-    <div id="loader">
-      <h1>Loading...</h1>
-    </div>
+    <div class="app-preloader1 fixed z-50 grid h-full w-full place-content-center bg-slate-50 dark:bg-navy-900">
       <div class="app-preloader-inner relative inline-block h-48 w-48"></div>
     </div>
+    
     <audio id="send-sound">
       <source src="./audio/notification1.mp3" type="audio/mpeg" />
     </audio>
