--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <div>
                 <div id="expert-msg" class="flex items-center justify-between p-4">
                   <!-- here create the span  -->
-          
+
                 </div>
                 <div
                   class="swiper px-4"
@@ -2039,7 +2039,7 @@
                 <div class="text-xl font-semibold text-white">
                   <span id="balanceNumber"></span>
                   <sup id="balanceType" class="text-tiny font-normal text-slate-200">
-                    <span class="balance-spinner"></span>
+                    <span class="balance-spinner" hidden></span>
                   </sup>
                 </div>
               </div>
@@ -2072,6 +2072,7 @@
               id="modalButton"
               class="btn h-8 w-8 rounded-full p-0 hover:bg-slate-300/20 focus:bg-slate-300/20 active:bg-slate-300/25 dark:hover:bg-navy-300/20 dark:focus:bg-navy-300/20 dark:active:bg-navy-300/25"
             >
+            
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5.5 w-5.5 text-slate-500 dark:text-navy-100"
@@ -2558,13 +2559,7 @@
 
         </div>
 
-
-
-
-
-
-
-        <!-- l conversation  -->
+       <!-- l conversation  -->
 
         <div class="flex items-center justify-center w-full">
           <span class="loader hidden" id="conversation-spinner"></span>
