--- a/index.html
+++ b/index.html
@@ -335,22 +335,8 @@
                 <div
                   class="my-4 mx-4 h-px shrink-0 bg-slate-200 dark:bg-navy-500"
                 ></div>
-                <div class="flex flex-col">
-                  <div
-                    @click="$dispatch('change-active-chat',{chatId:'chat-1',avatar_url:'images/avatar/avatar-19.jpg',name:'Alfredo Elliott'})"
-                    class="flex cursor-pointer items-center justify-center py-2.5 hover:bg-slate-150 dark:hover:bg-navy-600"
-                  >
-                    <div class="avatar h-10 w-10">
-                      <img
-                        class="rounded-full"
-                        src="images/avatar/unkown.jpg"
-                        alt="avatar"
-                      />
-                      <div
-                        class="absolute right-0 h-3 w-3 rounded-full border-2 border-white bg-slate-300 dark:border-navy-700"
-                      ></div>
-                    </div>
-                  </div>
+                <div class="flex flex-col" id="mini-sidebar" >
+               
                 </div>
               </div>
 
