--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
       class="min-h-100vh flex grow bg-slate-50 dark:bg-navy-900"
       x-cloak
     >
-
+    <div id="guest-modal" style="display: none;">
+      <div class="modal-content-guest">
+        <p>Failed creating guest.</p>
+        <button id="reloadBtn">Reload</button>
+      </div>
+    </div>
     
+
 
       <!-- Sidebar -->
       <div class="sidebar print:hidden">
