--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <!-- Sidebar Panel Body -->
           <div class="flex h-[calc(100%-4.5rem)] grow flex-col">
-            <div>
+            <div id="experts-container">
               <div id="expert-msg" class="flex items-center justify-between px-4">
               </div>
               <div class="swiper px-4"
