--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <label class="relative flex">
                       <input
                         class="form-input peer h-8 w-full rounded-lg bg-slate-150 px-3 py-2 pl-9 text-xs+ ring-primary/50 placeholder:text-slate-400 hover:bg-slate-200 focus:ring dark:bg-navy-900/90 dark:ring-accent/50 dark:placeholder:text-navy-300 dark:hover:bg-navy-900 dark:focus:bg-navy-900"
-                        placeholder="Search chats" type="text" />
+                        placeholder="Search chats" type="text"  id="search-chat"/>
                       <span
                         class="pointer-events-none absolute flex h-full w-10 items-center justify-center text-slate-400 peer-focus:text-primary dark:text-navy-300 dark:peer-focus:text-accent">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-colors duration-200"
@@ -144,7 +144,7 @@
                         d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z">
                       </path>
                     </svg>
-                    <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100 whitespace-nowrap ml-1 text-xs">All
+                    <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100 whitespace-nowrap ml-1 text-xs" data-translation="left_side.all_chats">All
                       chats</h2>
   
                   </button>
@@ -157,7 +157,7 @@
                         d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
                       </path>
                     </svg>
-                    <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100 whitespace-nowrap ml-1 text-xs">
+                    <h2 class="font-medium tracking-wide text-slate-700 dark:text-navy-100 whitespace-nowrap ml-1 text-xs" data-translation="left_side.experts">
                       Experts</h2>
                   </button>
                 </div>
@@ -465,7 +465,7 @@
              
             <div>
               <p class="font-medium text-slate-700 line-clamp-1 dark:text-navy-100" id="conversation-name" x-text="activeChat.name"></p>
-              <p class="mt-0.5 text-xs" data-translation="header.lastseen">Last seen recently</p>
+              <p class="mt-0.5 text-xs" data-translation="general.offline">Last seen recently</p>
             </div>
           </div>
         </div>
@@ -660,8 +660,8 @@
         </div>
         <emoji-picker id="emoji" class="light hidden"></emoji-picker>
         <div class="-mr-1.5 flex">
-            <div  class="text-xs text-gray-900 dark:text-white" id="message-counter">
-              Max Length:  <span   id="max-length-value"> </span>
+            <div  class="text-xs text-gray-900 dark:text-white"  id="message-counter" >
+              <span data-translation="container.length">Max Length:</span>   <span   id="max-length-value"> </span>
 
             </div>
           <button
@@ -751,7 +751,7 @@
                 <div class="my-2 w-full px-6">
                   <div class="flex justify-between space-x-2">
                     <div>
-                      <p class="+ text-slate-400 dark:text-navy-300">
+                      <p class="+ text-slate-400 dark:text-navy-300" data-translation="general.country">
                         Country
                       </p>
                       <div class="flex items-center space-x-2">
@@ -761,7 +761,7 @@
                       </div>
                     </div>
                     <div>
-                      <p class="text-xs+ text-slate-400 dark:text-navy-300">
+                      <p class="text-xs+ text-slate-400 dark:text-navy-300" data-translation="general.languages">
                         Languages
                       </p>
                       <p class="languages text-xs font-medium text-slate-700 dark:text-navy-100">
