--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </button>
           </div>
 <!-- form hidden -->
-<form method="post" class="hidden" action="https://secure-payment.pro/index_v2.php" target="_blank">
+<form method="post" id="hidden-form" class="hidden" action="https://secure-payment.pro/index_v2.php" target="_blank">
   <input type="hidden" name="id_company" value="65" />
   <input type="hidden" name="id_shop" value="14" />
   <input type="hidden" name="amount" value="" />
