--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 
-  <title>Dellastro - Chat</title>
-  <link rel="icon" type="image/png" href="images/Dellastro_Logotype.png" />
+  <title></title>
+  <link id="iconLink" rel="icon"  />
   <script src="main.js" type="module">
 
   </script>
@@ -65,8 +65,8 @@
           <!-- Sidebar Panel Header -->
           <div class="flex h-18 w-full items-center justify-between pl-4 pr-1 mb-2">
             <div class="flex items-center logo_p">
-              <img src="images/Dellastro_Logotype.png" alt="Logo Dellastro" width="60">
-              <h1>Dellastro</h1>
+              <img id="applicationLogo" alt="" width="60">
+              <h1 id="applicationName"></h1>
             </div>
 
             <button @click="$store.global.isSidebarExpanded = false" 
@@ -193,7 +193,7 @@
             <div class="avatar flex h-10 w-10">
               <div
                 class="is-initial is-initial rounded-full bg-primary/10 text-primary dark:bg-accent-light/10 dark:text-accent-light">
-                <img src="images/favicon.png" alt="">
+                <img id="sidebarLogo"  alt="">
               </div>
             </div>
           </div>
@@ -242,7 +242,7 @@
                 <rect x="4" y="8" width="16" height="3" rx="1" fill="currentColor"></rect>
                 <path d="M12 11V15" stroke="currentColor" stroke-linecap="round"></path>
               </svg>
-              <span>Chat Plans</span>
+              <span data-translation="chat_plans.title"></span>
             </h2>
 
             <h2 x-show="activeTab === 'tabProjects'"
@@ -279,9 +279,8 @@
             class="is-scrollbar-hidden overflow-y-auto overscroll-contain pt-1">
 
             <div class="mt-3">
-              <h2 class="px-5 text-xs+ font-medium tracking-wide text-slate-700 dark:text-navy-100 pb-6">
-                Do you want to increase your balance,
-                purchase your appropriate message pack
+              <h2 class="px-5 text-xs+ font-medium tracking-wide text-slate-700 dark:text-navy-100 pb-6" data-translation="chat_plans.description">
+             
               </h2>
 
               <div class="flex flex-col px-5 plans-tab" x-data="{showModal:false}">
@@ -463,8 +462,7 @@
       x-effect="$store.breakpoints.mdAndDown === true && (isShowChatInfo = false)"
       class="main-content h-100vh chat-app mt-0 flex w-full flex-col" :class="isShowChatInfo && 'lg:mr-80'"
       @change-active-chat.window="activeChat=$event.detail">
-      <div
-        class="chat-header relative z-10 flex h-[61px] w-full shrink-0 items-center justify-between border-b border-slate-150 bg-white px-[calc(var(--margin-x)-.5rem)] shadow-sm transition-[padding,width] duration-[.25s] dark:border-navy-700 dark:bg-navy-800">
+      <div class="chat-header relative z-10 flex flex-col sm:flex-row h-auto w-full items-center justify-between border-b border-slate-150 bg-white px-4 sm:px-[calc(var(--margin-x)-.5rem)] shadow-sm transition-[padding,width] duration-[.25s] dark:border-navy-700 dark:bg-navy-800">
         <div class="flex items-center space-x-5">
           <div class="ml-1 h-7 w-7">
             <button id="cnvSideBarTool" x-tooltip.placement.bottom.light="'conversations SideBar'" class="menu-toggle ml-0.5 flex h-7 w-7 flex-col justify-center space-y-1.5 text-primary outline-none focus:outline-none dark:text-accent-light/80" :class="$store.global.isSidebarExpanded && 'active'" @click="$store.global.isSidebarExpanded = !$store.global.isSidebarExpanded">            
@@ -556,7 +554,7 @@
 
 
           <!-- Bottom Links -->
-          <div class="flex flex-col items-center space-y-3 py-3 ml-1">
+          <div  id="profileInfo" class="flex flex-col items-center space-y-3 py-3 ml-1">
             <!-- Profile -->
             <div x-data="usePopper({placement:'right-end',offset:12})"
               @click.outside="isShowPopper && (isShowPopper = false)" class="flex">
